--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "testRegex": "test/.*\\.(ts|tsx|js)$"
   },
   "dependencies": {
-    "@asmartbear/status": "1.0.11"
+    "@asmartbear/status": "1.0.11",
+    "async-mutex": "0.5.0"
   }
 }
